# lib-mal

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: rust.yml  tests.yml
src/: builder.rs  client.rs  lib.rs  mock.rs  test.rs
src/model/: fields.rs  mod.rs  options.rs
src/test-data/: anime_details.json  anime_ranking.json  one_piece_details.json  seasonal_anime.json
tokengen/: Cargo.toml
tokengen/src/: main.rs
