[package]
name = "lib-mal"
version = "0.5.1"
edition = "2018"
description = "A library for interacting with the MyAnimeList API"
readme = "./README.md"
repository = "https://github.com/AnActualEmerald/lib-mal"
license = "GPL-3.0"
keywords = ["api", "MyAnimeList", "MAL", "anime"]
exclude = ["src/bin"]

[[bin]]
name="lib-mal-test"
path="src/bin/main.rs"


[dependencies]
reqwest = "0.11.10"
aes-gcm = "0.9.4"
rand = "0.8.5"
tiny_http = "0.11.0"
pkce = "0.1.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bitflags = "1.3.2"
simple-log = "1.5.1"


[dev-dependencies]
tokio-test = "0.4.2"
