[package]
name = "lib-mal"
version = "0.6.0"
edition = "2021"
description = "A library for interacting with the MyAnimeList API"
readme = "./README.md"
repository = "https://github.com/AnActualEmerald/lib-mal"
license = "GPL-3.0"
keywords = ["api", "MyAnimeList", "MAL", "anime"]

[[bin]]
name="lib-mal-test"
path="src/bin/main.rs"

[dependencies]
reqwest = "0.11"
aes-gcm = "0.10"
rand = "0.8.5"
tiny_http = "0.12"
pkce = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "2.3"
simple-log = "1.2"
async-trait = "0.1.68"

[dev-dependencies]
tokio-test = "0.4.2"
