[package]
name = "lib-mal"
version = "0.6.1"
edition = "2021"
description = "A library for interacting with the MyAnimeList API"
readme = "./README.md"
repository = "https://github.com/FakeMichau/lib-mal"
license = "GPL-3.0"
keywords = ["api", "MyAnimeList", "MAL", "anime"]

[[bin]]
name="lib-mal-test"
path="src/bin/main.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false }
aes-gcm = "0.10"
tiny_http = "0.12"
pkce = "0.2"
serde = { version = "1.0", default-features = false, features = ["serde_derive"] }
serde_json = "1.0"
bitflags = "2.3"
async-trait = "0.1.68"

[dev-dependencies]
tokio = { version = "1.28.2", default-features = false, features = ["macros"] }
